Refactor data download

--- a/workflow_example/JupyterWorkflowExample.ipynb
+++ b/workflow_example/JupyterWorkflowExample.ipynb
@@ -10,46 +10,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "fb91db26-7054-416b-a137-e68d8145c37e",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('seaborn')\n",
     "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8172694c-0592-4b5b-b8f7-dc71bee9892d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
     "from urllib.request import urlretrieve\n",
     "\n",
-    "import pandas as pd\n",
-    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'"
+    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
+    "\n",
+    "def get_df(filename='bike_count.csv', url=URL, force_download=False):\n",
+    "    if force_download or not os.path.exists(filename):\n",
+    "        urlretrieve(URL, filename)\n",
+    "    df = pd.read_csv('bike_count.csv', index_col='Date', parse_dates=True)\n",
+    "    df.columns = ['Total', 'East', 'West']\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "9f697a29-c5ce-40f0-9f7a-5314593956ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('bike_count.csv', <http.client.HTTPMessage at 0x280a4a2d788>)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "urlretrieve(URL, 'bike_count.csv')"
+    "df = get_df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "fc319632-b8d3-42d7-9e40-e3bf1600df6e",
    "metadata": {},
    "outputs": [
@@ -74,9 +79,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Fremont Bridge Total</th>\n",
-       "      <th>Fremont Bridge East Sidewalk</th>\n",
-       "      <th>Fremont Bridge West Sidewalk</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>East</th>\n",
+       "      <th>West</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -87,81 +92,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-08-01 00:00:00</th>\n",
-       "      <td>23.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>2012-10-03 00:00:00</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-08-01 01:00:00</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-01 02:00:00</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-01 03:00:00</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-01 04:00:00</th>\n",
+       "      <th>2012-10-03 01:00:00</th>\n",
        "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-03 02:00:00</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-03 03:00:00</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-03 04:00:00</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Fremont Bridge Total  Fremont Bridge East Sidewalk  \\\n",
-       "Date                                                                      \n",
-       "2022-08-01 00:00:00                  23.0                           7.0   \n",
-       "2022-08-01 01:00:00                  12.0                           5.0   \n",
-       "2022-08-01 02:00:00                   3.0                           0.0   \n",
-       "2022-08-01 03:00:00                   5.0                           2.0   \n",
-       "2022-08-01 04:00:00                  10.0                           2.0   \n",
-       "\n",
-       "                     Fremont Bridge West Sidewalk  \n",
-       "Date                                               \n",
-       "2022-08-01 00:00:00                          16.0  \n",
-       "2022-08-01 01:00:00                           7.0  \n",
-       "2022-08-01 02:00:00                           3.0  \n",
-       "2022-08-01 03:00:00                           3.0  \n",
-       "2022-08-01 04:00:00                           8.0  "
+       "                     Total  East  West\n",
+       "Date                                  \n",
+       "2012-10-03 00:00:00   13.0   4.0   9.0\n",
+       "2012-10-03 01:00:00   10.0   4.0   6.0\n",
+       "2012-10-03 02:00:00    2.0   1.0   1.0\n",
+       "2012-10-03 03:00:00    5.0   2.0   3.0\n",
+       "2012-10-03 04:00:00    7.0   6.0   1.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('bike_count.csv', index_col='Date', parse_dates=True)\n",
-    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "c252c865-49bd-4829-a030-9b947f346e04",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.columns = ['Total', 'East', 'West']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "c2203425-a9ef-450e-bed7-57a1d0522faf",
    "metadata": {},
    "outputs": [
@@ -182,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "fb555138-a4d1-4784-bdc6-7bd15f89b568",
    "metadata": {},
    "outputs": [
@@ -203,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "6358ae17-afec-4cc7-9a55-225682180611",
    "metadata": {},
    "outputs": [
@@ -213,7 +206,7 @@
        "<AxesSubplot:xlabel='time'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "580b8f73-24b1-4b28-99fb-766390eaddef",
    "metadata": {},
    "outputs": [
@@ -320,7 +313,7 @@
        "04:00:00         7.0         8.0         9.0         5.0         3.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "330d37b5-d983-4bd5-a3fc-c79c4cee1f18",
    "metadata": {},
    "outputs": [
