--- a/workflow_example/JupyterWorkflowExample.ipynb
+++ b/workflow_example/JupyterWorkflowExample.ipynb
@@ -24,37 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8172694c-0592-4b5b-b8f7-dc71bee9892d",
+   "execution_count": 19,
+   "id": "e65e4df5-4536-419b-9712-83eb81036878",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from urllib.request import urlretrieve\n",
-    "\n",
-    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
-    "\n",
-    "def get_df(filename='bike_count.csv', url=URL, force_download=False):\n",
-    "    if force_download or not os.path.exists(filename):\n",
-    "        urlretrieve(URL, filename)\n",
-    "    df = pd.read_csv('bike_count.csv', index_col='Date', parse_dates=True)\n",
-    "    df.columns = ['Total', 'East', 'West']\n",
-    "    return df"
+    "from jupyterworkflow.data import get_bike_count_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "9f697a29-c5ce-40f0-9f7a-5314593956ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_df()"
+    "df = get_bike_count_df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "fc319632-b8d3-42d7-9e40-e3bf1600df6e",
    "metadata": {},
    "outputs": [
@@ -135,7 +125,7 @@
        "2012-10-03 04:00:00    7.0   6.0   1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,15 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c252c865-49bd-4829-a030-9b947f346e04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "c2203425-a9ef-450e-bed7-57a1d0522faf",
    "metadata": {},
    "outputs": [
@@ -175,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "fb555138-a4d1-4784-bdc6-7bd15f89b568",
    "metadata": {},
    "outputs": [
@@ -196,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "6358ae17-afec-4cc7-9a55-225682180611",
    "metadata": {},
    "outputs": [
@@ -206,7 +188,7 @@
        "<AxesSubplot:xlabel='time'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "580b8f73-24b1-4b28-99fb-766390eaddef",
    "metadata": {},
    "outputs": [
@@ -313,7 +295,7 @@
        "04:00:00         7.0         8.0         9.0         5.0         3.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "330d37b5-d983-4bd5-a3fc-c79c4cee1f18",
    "metadata": {},
    "outputs": [
@@ -343,6 +325,30 @@
    "source": [
     " pivoted.plot(legend=False, alpha=0.01);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6148eb8d-ec64-4264-a442-4ab59abc362b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc67cbd9-b43a-43cf-95f1-f612d6e04b79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86d3ab93-e205-4196-aa33-bcb029662bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
